--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Turkish Deasciifier</title>
 
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-    crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 
   <style>
     h1 {
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <script src="https://unpkg.com/deasciifier@0.0.2"
+  <script src="https://unpkg.com/deasciifier@0.0.2/deasciifier.js"
     integrity="sha384-GHuDAc32XmbM/43NQaoQm9zHv9edIJ/WmIhpxl9SbLMq7xPTSqriEbx4JQ8i16EE"
     crossorigin="anonymous"></script>
 
